# Gravity

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Generator/: BaseGenerator.h  SolarSystem.h  TestingGenerator.h
Model/: Entity.cpp  Entity.h  World.cpp  World.cu  World.cuh  World.h
Notizen/: .2022-06-11-Notiz-18-30.autosave.xopp  2022-06-11-Notiz-18-30.xopp
Utility/: Vec3.cpp  Vec3.h
View/: Renderer.cpp  Renderer.h
notes/: 2022-06-11-Notiz-18-30.xopp
notizen/: 2022-06-11-Notiz-18-30.xopp
